--- a/dummy-backstage.yaml
+++ b/dummy-backstage.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: dumsystem
+  name: brokensystem
   description: An example system that groups related components
 spec:
   owner: zozo
@@ -34,7 +34,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Domain
 metadata:
-  name: dumdomain
+  name: brokendomain
   description: An example domain grouping multiple systems
 spec:
   owner: zozo
@@ -54,7 +54,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: zozo
+  name: broken
 spec:
   type: team
   children: []
@@ -100,3 +100,17 @@ spec:
     email: pragati.dubey@armorcode.io
     displayName: pragati
     name: pragati
+
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: pragati2
+spec:
+  memberOf: [github]
+  lifecycle: production
+  profile:
+    email: pragati.dubey@armorcodedummy.io
+    displayName: pragati
+    name: pragati
+    
